# Rgb2Bgr

./: README.md  main.py  main.spec  makefile  pyproject.toml
RGB2GBR/: api.py  errors.py  makefile  models.py
base_ui/: base.py  base_app_element.py  base_button_control_element.py  base_checkbutton_control_element.py  base_entry_control_element.py  base_file_choice_element.py  base_label_show_element.py  base_mac_entry_element.py  base_mac_show_element.py  base_options_select_control_element.py  base_progess_bar_show_element.py  base_scale_control_element.py  base_with_subprocess.py  group_control_element.py  makefile
lnk_screen_picture/: app.py  makefile  model.py  utils.py
lnk_screen_picture/ui/: folder_choice_and_save_element.py  picture_control_element.py  picture_show_element.py
