[tool.poetry]
name = "rgb2gbr"
version = "0.1.0"
description = ""
authors = ["xiaoling <samuel.ling.xiao@qq.com>"]
readme = "README.md"
packages = [{include = "RGB2GBR/*"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.0"
matplotlib = "^3.10.3"
ttkbootstrap = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
